# ra-test

./: .gitmodules  rust-toolchain
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/src/: lib.rs
