[package]
name = "enclave-app"
version = "1.0.0"
authors = ["jasl"]
edition = "2018"

[lib]
name = "enclaveapp"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"] }
itertools = { git = "https://github.com/mesalock-linux/rust-itertools-sgx" }
libsecp256k1 = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
serde       = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json  = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
http_req  = { git = "https://github.com/jasl/http_req-sgx", features = ["rust-tls"]}

lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
parity-scale-codec   = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-core = { version = "2.0.0", default-features = false, features = ["full_crypto"]}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_backtrace   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse         = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
