[package]
name = "enclave-app"
version = "1.0.0"
authors = ["jasl"]
edition = "2021"
resolver = "2"

[lib]
name = "enclaveapp"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"] }
itertools = { git = "https://github.com/mesalock-linux/rust-itertools-sgx" }
libsecp256k1 = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
serde       = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json  = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
http_req  = { git = "https://github.com/mesalock-linux/http_req-sgx", features = ["rust-tls"]}

lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
parity-scale-codec   = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"]}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_backtrace   = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types       = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd        = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto     = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse         = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts        = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal       = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand        = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand_derive = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
#sgx_alloc = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
sgx_backtrace = { path = "../teaclave-sgx-sdk/sgx_backtrace" }
#sgx_backtrace_sys = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_build_helper = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_cov = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_crypto_helper = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_demangle = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_libc = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
sgx_rand = { path = "../teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../teaclave-sgx-sdk/sgx_rand_derive" }
#sgx_serialize = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_serialize_derive = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_serialize_derive_internals = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
sgx_tcrypto = { path = "../teaclave-sgx-sdk/sgx_tcrypto" }
#sgx_tcrypto_helper = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_tdh = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_tkey_exchange = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_tprotected_fs = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
sgx_trts = { path = "../teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../teaclave-sgx-sdk/sgx_tstd" }
#sgx_tunittest = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
sgx_types = { path = "../teaclave-sgx-sdk/sgx_types" }
#sgx_ucrypto = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_unwind = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }
#sgx_urts = { git = "https://github.com/Phala-Network/incubator-teaclave-sgx-sdk.git" }

